--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  font-family: 'San', cursive;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   color: var(--primary-text-color);
   background-color: var(--background-color);
   transition: all 0.3s ease;
@@ -152,7 +152,22 @@ button.join-btn:hover {
   border: none;
 }
 
+/* Show message to mobile users */
 @media (max-width: 768px) {
+  body::after {
+    content: "Please turn on desktop mode";
+    display: block;
+    position: fixed;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 1rem;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #ff0000;
+    font-size: 16px;
+    border-radius: 5px;
+    z-index: 9999;
+  }
 
   .table-header,
   .table-row {
