--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,7 @@ body {
   width: 100%;
   height: 100%;
   font-size: 15px;
-  margin-top: 5vh;
+  margin-top: 1vh;
   display: flex;
   flex-direction: column;
   gap: 2rem;
@@ -224,4 +224,17 @@ footer {
 
 .terminologies strong {
   color: #333;
+}
+
+.project-logo {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  vertical-align: middle;
+}
+
+.project-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
